css/style.css
* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
}
body {
   font-family: 'Whitney', 'Helvetica Neue', 'Helvetica', 'Arial, sans-serif';
}
/* Section Header  */

header {
   color: white;
}

/* Header top  */

.header-top {
   background-color: rgb(59,97,219);
   height: 70px;
}

.container {
   margin: 0 auto;
   width: 1000px;
   height: 70px;
}

#logo, .login, .central {
   float: left;
   height: 70px;
}

#logo, .login {
   width: 20%;
}

#logo img {
   display: inline-block;
}

.central {
   width: 60%;
   text-align: center;
   line-height: 70px;
}


.navigation li{
   display: inline-block;
   margin: 0 10px;
}

.navigation li a {
   text-decoration: none;
   color: white;
   font-family: sans-serif;
}
.navigation li a:hover {
   text-decoration: underline;
}



.login {
   text-align: right;
   line-height: 70px;
}

.button-small a {
   text-decoration: none;
   background-color: white;
   padding: 10px 15px;
   border-radius: 20px;
   color: black;
}


/* Header Bottom  */

.header-bottom {
   background-image: url('..//img/jumbo.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   height: 500px;
   position: relative;
}

.title-header {
   text-align: center;
   width: 50%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
}

.title-header p {
   margin-bottom: 30px;
}

.title-header h1 {
   margin-bottom: 40px;
   font-size: 50px;
}

.button-big {
   display: inline-block;
   border-radius: 30px;
   margin: 0 20px;
}

.button-big a {
   display: inline-block;
   text-decoration: none;
   padding: 15px 25px;
   border-radius: 30px;
}
.button-big a:hover {
   transform: scale(1.1);
}

.button-big.btn-light a{
   background-color: white;
   color: black;
}
.button-big.btn-dark a {
   background-color: black;
   color: white;
}

